# sugarcrm-multiverse-styleguide

./: BUILD.bazel  README.md  build.sh  gulpfile.js  kss-config.json  npm.js  package-lock.json  package.json
custom-builder/: index.hbs
kss/helpers/: collect-less-rules.js  colors.js  hbs-helpers.js  icons.js
less/: config.less  index.md
less/components/: button-base.hbs  button-link.hbs  button-primary.hbs  button-secondary.hbs  button.less  form.less
less/document/: basecss.less  components.less  dashboards.less  forms.less  introduction.less  labs.less  layouts_views.less  typography.less
less/documented-components/: buttons.less  colors.less  icons.less  labs.less  navbar.less
less/documented-components/hbs/: button-base.hbs  button-danger.hbs  button-disabled.hbs  button-dropdown.hbs  button-group.hbs  button-info.hbs  button-inverse.hbs  button-link.hbs  button-misc.hbs  button-primary.hbs  button-secondary.hbs  button-sizes.hbs  button-success.hbs  button-warning.hbs  navbar-horizontal.hbs  navbar-vertical.hbs
less/lib/font-awesome-5.7.2/less/: SUGAR_CUSTOMIZED__animated.less  SUGAR_CUSTOMIZED__core.less  SUGAR_CUSTOMIZED_brands.less  SUGAR_CUSTOMIZED_regular.less  SUGAR_CUSTOMIZED_solid.less  _variables.less  fontawesome.less
less/lib/font-awesome-sugar-extension/: font-awesome-sugar-extension.less
less/shared/: colors.less  variables.less
less/undocumented-components/: font.less  mixins.less  variables.less
src/: config.css  styleguide.js
src/styleguide-doc-frontend/: config.less  kss.less  styleguide.js
styleguide/: item-button.html  item-forms-anotherform.html  section-button.html  section-forms.html
